Initial implementaiton of splade

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wNDpiAzBI0xH"
+      },
       "source": [
         "# LLMSearch Google Colab Demo\n",
         "\n",
@@ -32,22 +19,37 @@
         "* Upload or generate some documents (check supported format in README.md) in `sample_docs` folder.\n",
         "* Optional - tweak configuration file to point to a different model\n",
         "* Optional - download\n"
-      ],
-      "metadata": {
-        "id": "wNDpiAzBI0xH"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Prepare configuration and download the model"
-      ],
       "metadata": {
         "id": "43kUuvFzDxFr"
-      }
+      },
+      "source": [
+        "### Prepare configuration and download the model"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d2s1HFkwBHNe",
+        "outputId": "f6214a2a-2764-4a63-86da-21f06b82cb88"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": []
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "%%shell\n",
         "\n",
@@ -61,6 +63,8 @@
         "\n",
         "embeddings:\n",
         "  embeddings_path: /content/llm/embeddings\n",
+        "  chunk_sizes:\n",
+        "    - 1024\n",
         "  document_settings:\n",
         "  - doc_path: sample_docs/\n",
         "    scan_extensions:\n",
@@ -71,7 +75,6 @@
         "        skip_first: True\n",
         "        merge_sections: True\n",
         "        remove_images: True\n",
-        "    chunk_size: 1024\n",
         "\n",
         "semantic_search:\n",
         "  search_type: similarity # mmr\n",
@@ -105,37 +108,11 @@
         "     temperature: 0.2\n",
         "\n",
         "EOF\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d2s1HFkwBHNe",
-        "outputId": "f6214a2a-2764-4a63-86da-21f06b82cb88"
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%shell\n",
-        "\n",
-        "# Download the model\n",
-        "# Sample model - https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/tree/main\n",
-        "\n",
-        "cd llm/models\n",
-        "wget https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/resolve/main/wizardLM-13B-Uncensored.ggmlv3.q6_K.bin"
-      ],
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -143,11 +120,10 @@
         "id": "cmnHPhTNEWub",
         "outputId": "5d2e5ab2-daf9-4c05-8d48-5bc68636ba0c"
       },
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-08-02 11:46:03--  https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/resolve/main/wizardLM-13B-Uncensored.ggmlv3.q6_K.bin\n",
             "Resolving huggingface.co (huggingface.co)... 65.8.49.2, 65.8.49.24, 65.8.49.53, ...\n",
@@ -168,23 +144,32 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": []
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "%%shell\n",
+        "\n",
+        "# Download the model\n",
+        "# Sample model - https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/tree/main\n",
+        "\n",
+        "cd llm/models\n",
+        "wget https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/resolve/main/wizardLM-13B-Uncensored.ggmlv3.q6_K.bin"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Enable building with CUDA"
-      ],
       "metadata": {
         "id": "M0UkSdWrAByA"
-      }
+      },
+      "source": [
+        "### Enable building with CUDA"
+      ]
     },
     {
       "cell_type": "code",
@@ -198,8 +183,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "env: CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\"\n",
             "env: FORCE_CMAKE=1\n"
@@ -214,18 +199,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 2,
       "metadata": {
         "id": "Zs6ZdRgO7Kxz"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install git+https://github.com/snexus/llm-search"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -234,11 +217,10 @@
         "id": "daEnZje03nHX",
         "outputId": "7ec01beb-d7f1-4b20-cf7d-62dfaf4ecf6f"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/snexus/llm-search\n",
             "  Cloning https://github.com/snexus/llm-search to /tmp/pip-req-build-6snvel4k\n",
@@ -595,7 +577,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -605,24 +586,26 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "!pip install git+https://github.com/snexus/llm-search"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "3Qjl2MxoA4uc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "! llmsearch index create -c llm/config/config.yaml"
-      ],
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -630,11 +613,10 @@
         "id": "MaOl4lF-4uEE",
         "outputId": "84e383d0-04ac-4c87-c33e-480fede603d7"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "ggml_init_cublas: found 1 CUDA devices:\n",
             "  Device 0: Tesla T4, compute capability 7.5\n",
@@ -835,15 +817,14 @@
             "\u001b[32m2023-08-02 11:51:55.490\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mllmsearch.chroma\u001b[0m:\u001b[36mcreate_index_from_documents\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mPersisting the database..\u001b[0m\n"
           ]
         }
+      ],
+      "source": [
+        "! llmsearch index create -c llm/config/config.yaml"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%shell\n",
-        "\n",
-        "llmsearch interact llm -c llm/config/config.yaml"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -851,11 +832,10 @@
         "id": "qOU3Fksc_vr9",
         "outputId": "05d0fe9f-b9ff-431c-e2dd-e403db6d9776"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "ggml_init_cublas: found 1 CUDA devices:\n",
             "  Device 0: Tesla T4, compute capability 7.5\n",
@@ -1047,16 +1027,35 @@
             "ENTER QUESTION >> "
           ]
         }
+      ],
+      "source": [
+        "%%shell\n",
+        "\n",
+        "llmsearch interact llm -c llm/config/config.yaml"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aqHe-P3oAw7g"
-      },
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
