--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -83,7 +83,7 @@
         "llm:\n",
         " type: llamacpp\n",
         " params:\n",
-        "   model_path: /content/llm/models/wizardLM-13B-Uncensored.ggmlv3.q6_K.bin\n",
+        "   model_path: /content/llm/models/wizardLM-13B-Uncensored.ggmlv3.q4_K_M.bin\n",
         "   prompt_template: |\n",
         "         ### Instruction:\n",
         "         Use the following pieces of context to provide detailed answer the question at the end. If answer isn't in the context, say that you don't know, don't try to make up an answer.\n",
@@ -158,8 +158,9 @@
         "# Sample model - https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/tree/main\n",
         "# Optionally download a smaller model to test...\n",
         "\n",
+        "\n",
         "cd llm/models\n",
-        "wget https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/resolve/main/wizardLM-13B-Uncensored.ggmlv3.q6_K.bin"
+        "wget https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/resolve/main/wizardLM-13B-Uncensored.ggmlv3.q4_K_M.bin\n"
       ]
     },
     {
