Update google colab notebook

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -53,7 +53,7 @@
         "%%shell\n",
         "\n",
         "# Make folder structure\n",
-        "mkdir -p llm/embeddings llm/cache llm/models llm/config\n",
+        "mkdir -p llm/embeddings llm/cache llm/models llm/config sample_docs\n",
         "\n",
         "# Generate sample configuration\n",
         "\n",
