Change Google colab notebooks to latest supported GGUF format

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -8,15 +8,14 @@
       "source": [
         "# LLMSearch Google Colab Demo\n",
         "\n",
-        "This notebook was tested to run the following 13B model - https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/tree/main\n",
-        "\n",
-        "The memory consumption given the configuration file below is almost maximum on free tier of Google Colab.\n",
+        "This notebook was tested to run the following 13B model - https://huggingface.co/TheBloke/airoboros-l2-13B-gpt4-1.4.1-GGUF\n",
         "\n",
         "In case of memory errors, tweak the config to offload some layers to CPU, or try a smaller model.\n",
         "\n",
         "## Instuctions\n",
         "\n",
         "* Upload or generate some documents (check supported format in README.md) in `sample_docs` folder.\n",
+        "* Run the notebook.\n",
         "* Optional - tweak configuration file to point to a different model\n"
       ]
     },
@@ -83,7 +82,7 @@
         "llm:\n",
         " type: llamacpp\n",
         " params:\n",
-        "   model_path: /content/llm/models/wizardLM-13B-Uncensored.ggmlv3.q4_K_M.bin\n",
+        "   model_path: /content/llm/models/airoboros-l2-13b-gpt4-1.4.1.Q4_K_M.gguf\n",
         "   prompt_template: |\n",
         "         ### Instruction:\n",
         "         Use the following pieces of context to provide detailed answer the question at the end. If answer isn't in the context, say that you don't know, don't try to make up an answer.\n",
@@ -160,7 +159,8 @@
         "\n",
         "\n",
         "cd llm/models\n",
-        "wget https://huggingface.co/TheBloke/WizardLM-13B-Uncensored-GGML/resolve/main/wizardLM-13B-Uncensored.ggmlv3.q4_K_M.bin\n"
+        "wget https://huggingface.co/TheBloke/airoboros-l2-13B-gpt4-1.4.1-GGUF/resolve/main/airoboros-l2-13b-gpt4-1.4.1.Q4_K_M.gguf\n",
+        "\n"
       ]
     },
     {
