Add explicit CUDA options that fixes GPU support for llama-cpp models

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -193,8 +193,7 @@
         }
       ],
       "source": [
-        "\n",
-        "%env CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\"\n",
+        "%env CMAKE_ARGS=-DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc -DLLAMA_CUBLAS=ON\n",
         "%env FORCE_CMAKE=1"
       ]
     },
@@ -592,7 +591,7 @@
         }
       ],
       "source": [
-        "!pip install git+https://github.com/snexus/llm-search"
+        "!pip install --no-cache-dir git+https://github.com/snexus/llm-search"
       ]
     },
     {
