--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -54,6 +54,17 @@
         "# Make folder structure\n",
         "mkdir -p llm/embeddings llm/cache llm/models llm/config sample_docs\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%shell\n",
+        "\n",
         "# Generate sample configuration\n",
         "\n",
         "cat << EOF > llm/config/config.yaml\n",
@@ -77,8 +88,20 @@
         "semantic_search:\n",
         "  search_type: similarity # mmr\n",
         "  max_char_size: 3096\n",
+        "EOF"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%shell\n",
         "\n",
         "\n",
+        "cat << EOF > llm/config/model.yaml\n",
+        "# Geberate sample model configuration for llama-cpp\n",
         "llm:\n",
         " type: llamacpp\n",
         " params:\n",
@@ -105,7 +128,7 @@
         "     top_k: 40\n",
         "     temperature: 0.2\n",
         "\n",
-        "EOF\n"
+        "EOF"
       ]
     },
     {
@@ -205,6 +228,17 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "# Install torch and torchvision\n",
+        "!pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118"
+      ]
     },
     {
       "cell_type": "code",
@@ -1031,7 +1065,7 @@
       "source": [
         "%%shell\n",
         "\n",
-        "llmsearch interact llm -c llm/config/config.yaml"
+        "llmsearch interact llm -c llm/config/config.yaml -m llm/config/model.yaml"
       ]
     },
     {
