Update demo notebook

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -15,6 +15,7 @@
         "## Instuctions\n",
         "\n",
         "* Upload or generate some documents (check supported format in README.md) in `sample_docs` folder.\n",
+        "    * Or use a sample pdf book provided - Pro Git - https://git-scm.com/book/en/v2\n",
         "* Run the notebook.\n",
         "* Optional - tweak configuration file to point to a different model\n"
       ]
@@ -54,7 +55,8 @@
         "# Make folder structure\n",
         "mkdir -p llm/embeddings llm/cache llm/models llm/config sample_docs\n",
         "\n",
-        "\n"
+        "# Download sample book\n",
+        "wget -P sample_docs https://github.com/progit/progit2/releases/download/2.1.413/progit.pdf\n"
       ]
     },
     {
@@ -63,9 +65,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%%shell\n",
-        "\n",
-        "# Generate sample configuration\n",
+        "%%shell# Generate sample configuration\n",
         "\n",
         "cat << EOF > llm/config/config.yaml\n",
         "cache_folder: /content/llm/cache\n",
@@ -88,6 +88,10 @@
         "semantic_search:\n",
         "  search_type: similarity # mmr\n",
         "  max_char_size: 3096\n",
+        "\n",
+        "  reranker:\n",
+        "    enabled: True\n",
+        "    model: \"marco\" # for `BAAI/bge-reranker-base` or \"marco\" for cross-encoder/ms-marco-MiniLM-L-6-v2\n",
         "EOF"
       ]
     },
