Fix a shell cell in the demo notebook

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -65,9 +65,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%%shell# Generate sample configuration\n",
+        "%%shell\n",
+        "\n",
+        "# Generate sample configuration\n",
         "\n",
         "cat << EOF > llm/config/config.yaml\n",
+        "\n",
         "cache_folder: /content/llm/cache\n",
         "\n",
         "embeddings:\n",
