Fix google colab notebook

--- a/notebooks/llmsearch_google_colab_demo.ipynb
+++ b/notebooks/llmsearch_google_colab_demo.ipynb
@@ -75,6 +75,9 @@
         "\n",
         "embeddings:\n",
         "  embeddings_path: /content/llm/embeddings\n",
+        "  embedding_model: # Optional embedding model specification, default is e5-large-v2. Swap to a smaller model if out of CUDA memory\n",
+        "    type: sentence_transformer # other supported types - \"huggingface\" and \"instruct\"\n",
+        "    model_name: \"intfloat/e5-large-v2\"\n",
         "  chunk_sizes:\n",
         "    - 1024\n",
         "  document_settings:\n",
@@ -244,7 +247,8 @@
       "source": [
         "\n",
         "# Install torch and torchvision\n",
-        "!pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118"
+        "# \n",
+        "# !pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118"
       ]
     },
     {
@@ -632,7 +636,8 @@
         }
       ],
       "source": [
-        "!pip install --no-cache-dir git+https://github.com/snexus/llm-search"
+        "# !pip install --no-cache-dir git+https://github.com/snexus/llm-search\n",
+        "!pip install pyllmsearch"
       ]
     },
     {
